added new styles

--- a/assets/css/idle-styles.css
+++ b/assets/css/idle-styles.css
@@ -151,7 +151,6 @@ section{
 }
 .idle_title_span span{
 	color: #ff9d60;
-	text-decoration: underline;
 	letter-spacing: 2px;
 	text-transform: uppercase;
 	font-weight: 500;
@@ -602,12 +601,19 @@ section{
 .feature_icon{
 	width: 120px;
 	height: 120px;
-	line-height: 120px;
+	line-height: 155px;
 	text-align: center;
 	background: #f6f6ff;
 	margin: 0 auto 35px auto;
 	border-radius: 50%;
 }
+
+.feature_icon:hover{
+    background: #3c2768;
+    color: #fff;
+    transition-duration: 1s;
+}
+
 .feature_icon i{
 	font-size: 60px;
 }
@@ -619,10 +625,10 @@ section{
 /*8. Satrt idle_video section css */
 .idle_video{
 	position: relative;
-	background: url(../assets/images/video_bg.jpg) no-repeat;
+	background: url(../build/assets/images/video_bg.jpg) no-repeat;
 }
 .play_area{
-	background: url(../assets/images/play_bg.jpg) no-repeat center;
+	background: url(../build/assets/images/play_bg.jpg) no-repeat center;
 	background-size: cover;
 	height: 600px;
 	text-align: center;
