added colour hex codes

--- a/assets/css/idle-styles.css
+++ b/assets/css/idle-styles.css
@@ -7,6 +7,11 @@ Version: 1.0.0
 
 
 /*
+Colours
+Purple: #3c2768;
+Orange: #ff9d60;
+Black: #170e2a;
+White: #fff;
 
 1.Default css
 2.preloader css
