--- a/assets/css/idle-styles.css
+++ b/assets/css/idle-styles.css
@@ -948,7 +948,6 @@ section{
 	color: #ff9d60;
 	font-weight: 500;
 	letter-spacing: 2px;
-	text-decoration: underline;
 	text-transform: uppercase;
 	margin-bottom: 15px;
 }
@@ -1023,8 +1022,7 @@ section{
 
 /*15. Satrt Blog.html css */
 .idle_sb_bg{
-	background: url(../assets/images/home_bg1.jpg) no-repeat;
-	background-size: cover;
+	background-image: linear-gradient( 135deg, #3B2667 10%, #BC78EC 100%);
 	position: relative;
 	padding: 335px 0 220px;
 }
@@ -1408,6 +1406,11 @@ section{
 }
 .blog_img img {
     width: 100%;
+}
+.blog_img img:hover{
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+    transition: .8s;
 }
 .blog_details{
 	padding: 40px;
