--- a/assets/css/idle-styles.css
+++ b/assets/css/idle-styles.css
@@ -189,7 +189,7 @@ section{
 
 /* 2. Start preloader css */
 .preloader{
-  background: #fff;
+  background-image: linear-gradient( 135deg, #3B2667 10%, #BC78EC 100%);
   height: 100%;
   overflow: hidden;
   position: fixed;
@@ -214,17 +214,17 @@ section{
   animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
 .lds-ellipsis div:nth-child(1) {
-	background: #6e40c2;
+	background: #fff;
   left: 6px;
   animation: lds-ellipsis1 0.6s infinite;
 }
 .lds-ellipsis div:nth-child(2) {
-	background: #5825b8;
+	background: #fff;
   left: 6px;
   animation: lds-ellipsis2 0.6s infinite;
 }
 .lds-ellipsis div:nth-child(3) {
-	background: #ff9d60;
+	background: #fff;
   left: 26px;
   animation: lds-ellipsis2 0.6s infinite;
 }
