added purple background with border bottom

--- a/assets/css/meanmenu.css
+++ b/assets/css/meanmenu.css
@@ -18,7 +18,8 @@ a.meanmenu-reveal {
 	float: left;
 	width: 100%;
 	position: relative;
-	background: transparent;
+	background: #170e2a;
+	border-bottom: 2px solid #3B2667;
 	padding: 4px 0;
 	min-height: 42px;
 	z-index: 999999;
