--- a/assets/css/meanmenu.css
+++ b/assets/css/meanmenu.css
@@ -19,7 +19,6 @@ a.meanmenu-reveal {
 	width: 100%;
 	position: relative;
 	background: #170e2a;
-	border-bottom: 2px solid #3B2667;
 	padding: 4px 0;
 	min-height: 42px;
 	z-index: 999999;
@@ -54,7 +53,7 @@ a.meanmenu-reveal {
 .mean-container .mean-nav {
 	float: left;
 	width: 100%;
-	background: #0c1923;
+	background: #3B2667;
 	margin-top: 44px;
 }
 
@@ -167,7 +166,6 @@ a.meanmenu-reveal {
 .mean-remove {
 	display: none !important;
 }
-
 
 .mean-container .mean-bar::after {
 	color: #ffffff;
