commented out text shadows for post title hover

--- a/assets/css/idle-styles.css
+++ b/assets/css/idle-styles.css
@@ -1058,7 +1058,7 @@ section{
 .bl_main_info.blog_details h2 a:hover{
     color: #ff9d60;
     transition: .5s;
-    text-shadow: 2.778px 7.757px 10px rgba(255, 157, 96, 0.3);
+    /*text-shadow: 2.778px 7.757px 10px rgba(255, 157, 96, 0.3);*/
 }
 
 .bl_main_info p{
